Ensure consistent XML parser config